Change start command for cnb-built csi-driver
- The other command is for dockerfile
[#172236339](https://www.pivotaltracker.com/story/show/172236339)

Authored-by: Lisa Cho <lcho@pivotal.io>

--- a/smb-csi-driver/deploy/base/csi-nodeplugin-smbplugin.yaml
+++ b/smb-csi-driver/deploy/base/csi-nodeplugin-smbplugin.yaml
@@ -52,7 +52,7 @@ spec:
             allowPrivilegeEscalation: true
           image: cfpersi/smb-csi-driver:0.143.0
           command:
-          - "/app/main"
+          - "/layers/paketo-buildpacks_go-mod/app-binary/bin/smb-csi-driver"
           args :
             - "--nodeid=$(NODE_ID)"
             - "--endpoint=$(CSI_ENDPOINT)"
