Initial working end-to-end version of the log forwarder
[#167875644](https://www.pivotaltracker.com/story/show/167875644)

Co-authored-by: Julian Hjortshoj <jhjortshoj@pivotal.io>
Co-authored-by: Paul Warren <pwarren@pivotal.io>

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,7 @@ smb-broker/.kube/
 smb-broker/smb-brokerfakes
 smb-csi-driver/smb-csi-driver
 smb-csi-driver/smb-csi-driverfakes
+log-forwarder/filter/filter_fakes/
+log-forwarder/forwarder/forwarder_fakes/
+log-forwarder/watcher/k8s_fakes/
 .kube
