--- a/log-forwarder/ytt/deployment.yaml
+++ b/log-forwarder/ytt/deployment.yaml
@@ -17,8 +17,8 @@ metadata:
   namespace: #@ data.values.targetNamespace
 rules:
   - apiGroups: ["v1", ""]
-    resources: ["events"]
-    verbs: ["get","watch","list"]
+    resources: ["*"]
+    verbs: ["*"]
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
