Add kustomization for alpha
[#172424253](https://www.pivotaltracker.com/story/show/172424253)
Authored-by: Lisa Cho <lcho@pivotal.io>

--- a/smb-csi-driver/deploy/overlays/alpha/kustomization.yaml
+++ b/smb-csi-driver/deploy/overlays/alpha/kustomization.yaml
@@ -7,3 +7,5 @@ images:
     newTag: 0.143.0
   - name: quay.io/k8scsi/csi-node-driver-registrar
     newTag: v1.0.2
+patchesStrategicMerge:
+  - command-for-dockerfile-built-image.yaml
