--- a/smb-csi-driver/example/pv.yaml
+++ b/smb-csi-driver/example/pv.yaml
@@ -18,7 +18,7 @@ spec:
     volumeHandle: "volume-handle"
     volumeAttributes:
     # The address of the SMB server and share
-      "share": "//samba-test.default/share"
+      "share": "//SERVER/SHARE"
     nodePublishSecretRef:
       name: test-smb
       namespace: default
@@ -67,5 +67,5 @@ metadata:
   namespace: default
 stringData:
   # Username and password for SMB share
-  username: user
-  password: pass
+  username: USER
+  password: PASS
