--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "smb-csi-driver"]
 	path = smb-csi-driver
-	url = git@github.com:cloudfoundry/smb-csi-driver.git
+	url = https://github.com/cloudfoundry/smb-csi-driver
